--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Hola mundo!</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1  style="color:red">hello world!</h1>
-=======
-    <h1>Hola mundo!</h1>
->>>>>>> feature/spanish
+    <h1  style="color:red">Hola mundo!</h1>
 </body>
 </html>
